2006-10-25  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-remove-markup): When STRING is nil, insert a null
	string.
	(mixi-make-introduction): New function.
	(mixi-introduction-p): New macro.
	(mixi-introduction-parent): New accessor method.
	(mixi-introduction-owner): Ditto.
	(mixi-introduction-content): Ditto.
	(mixi-introduction-list-page): New macro.
	(mixi-introduction-list-regexp): New regexp.
	(mixi-my-introduction-list-regexp): Ditto.
	(mixi-get-introductions): New function.

2006-10-25  Daiki Ueno  <ueno@unixuser.org>

	* mixi.el (mixi-retrieve-function): Try to select
	mixi-retrieve-function automatically.

2006-10-25  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-cache-expires): Add new constant.
	(mixi-cache-expired-p): Follow the change above.

2006-10-25  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-retrieve-function): Use `radio' instead of `choice'.
	(mixi-default-email): Ditto.
	(mixi-default-password): Ditto.
	(mixi-cache-expires): Ditto.

2006-10-25  Daiki Ueno  <ueno@unixuser.org>

	* mixi.el (mixi-time-less-p): Normalize encoded time.
	(mixi-time-add): Ditto.

2006-10-24  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-object-timestamp): New accessor method.
	(mixi-cache-expired-p): Use it.
	(mixi-object-realize-p): New alias.
	(mixi-object-set-timestamp): New accessor method.
	(mixi-object-touch): New macro.
	(mixi-friend-realize-p): Abolish.
	(mixi-friend-touch): Ditto.
	(mixi-diary-realize-p): Ditto.
	(mixi-diary-touch): Ditto.
	(mixi-community-realize-p): Ditto.
	(mixi-community-touch): Ditto.
	(mixi-topic-realize-p): Ditto.
	(mixi-topic-touch): Ditto.
	(mixi-message-realize-p): Ditto.
	(mixi-message-touch): Ditto.
	(mixi-friend-realize): Follow the change above.
	(mixi-diary-realize): Ditto.
	(mixi-community-realize): Ditto.
	(mixi-topic-realize): Ditto.
	(mixi-message-realize): Ditto.

2006-10-24  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-message-cache): New variable.
	(mixi-make-message): New function.